updates/11/06/24